[package]
name = "pysysinfo"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
description = "Python-friendly Rust bindings for sysinfo"
license = "MIT"
repository = "https://github.com/mrcsparker/pysysinfo"

[lib]
name = "pysysinfo"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.28.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.38.4"
