[package]
name = "pysysinfo"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
description = "Python-friendly Rust bindings for sysinfo"
license = "MIT"
authors = ["mrcsparker"]
homepage = "https://github.com/mrcsparker/pysysinfo"
repository = "https://github.com/mrcsparker/pysysinfo"
documentation = "https://mrcsparker.github.io/pysysinfo/"
readme = "README.md"
keywords = ["python", "pyo3", "sysinfo", "monitoring", "ffi"]
categories = ["api-bindings", "development-tools::ffi", "os"]

[lib]
name = "pysysinfo"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.28.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.38.4"
