[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "pysysinfo"
version = "0.2.0"
description = "A polished, Python-first wrapper around the Rust sysinfo crate."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["sysinfo", "system", "monitoring", "pyo3", "rust"]
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    "maturin>=1.12,<2.0",
    "pytest>=8.3.5,<9.0.0",
    "pytest-cov>=6.1.1,<7.0.0",
    "ruff>=0.11.2,<0.12.0",
]

[tool.maturin]
python-source = "python"
module-name = "pysysinfo._core"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.uv]
required-version = ">=0.10.0"
